--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .addColorDancerButton{
   padding:5px 12px;
   float:right;
 }
@@ -22,6 +22,12 @@ body, a:link, a:visited, a:active{
 }
 .dancer{
   border:10px solid red;
+  border-radius:10px;
+  position:absolute;
+}
+
+.dancer2{
+  border:10px solid blue;
   border-radius:10px;
   position:absolute;
 }
