--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html{
   height:100%;
 }
 body{
+  background-image: url('img/danceFloor.jpg');
   margin: 0px;
   background-color:#444;
   font-size: 18px;
@@ -9,9 +10,13 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .addColorDancerButton{
+.title, .addDancerButton, .addColorDancerButton, .addBreakDancerButton{
   padding:5px 12px;
   float:right;
+}
+.lineUp {
+  float:left;
+  padding:5px 12px;
 }
 .topbar{
   height:32px;
@@ -21,13 +26,5 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
-  position:absolute;
-}
-
-.dancer2{
-  border:10px solid blue;
-  border-radius:10px;
   position:absolute;
 }
