--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body, a:link, a:visited, a:active{
   padding:5px 12px;
   float:right;
 }
-.lineUp {
+.lineUp, .random {
   float:left;
   padding:5px 12px;
 }
